--- a/index.html
+++ b/index.html
@@ -233,6 +233,16 @@ code.language-yaml {
 <li><a href="http://a-kawashiro.hatenablog.com/">blog</a></li>
 <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
 </ul>
+<h2 class="mume-header" id="works">Works</h2>
+
+<ul>
+<li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
+Type checker for Egison programming language.</li>
+<li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
+A mini music player using ATMEGA168 and SD card.</li>
+<li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
+A simple invader game wirtten in Haskell.</li>
+</ul>
 
       </div>
       
