--- a/index.html
+++ b/index.html
@@ -2,48 +2,59 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="common.css" type="text/css" />
   <title>Akira KAWATA</title>
 </head>
 
+
+
 <body>
-  <h1>Akira KAWATA</h1>
-  <h2>Intrests</h2>
-
-  <ul>
-    <li>Type theory of programming languages</li>
-    <li>Implementation of programming languages</li>
-    <li>Implementation of search engines</li>
-    <li>Competitive programming</li>
-    <li>Haskell</li>
-    <li>Vim</li>
-  </ul>
-  <h2 class="mume-header" id="links">Links</h2>
-
-  <ul>
-    <li><a href="https://github.com/akawashiro">GitHub</a></li>
-    <li><a href="http://a-kawashiro.hatenablog.com/">blog</a></li>
-    <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
-  </ul>
-  <h2>Software & Hardware</h2>
-
-  <ul>
-    <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
-      Type checker for Egison programming language.</li>
-    <li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
-      A mini music player using ATMEGA168 and SD card.</li>
-    <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
-      A simple invader game wirtten in Haskell.</li>
-  </ul>
-
-  <h2>Honors</h2>
-  <ul>
-    <li><a href="https://www.ioi-jp.org/joi/2011/2012-medalists.html">The 11th Japan Olympiad in Informatics, Silver medal.</a></li>
-  </ul>
+  <div id="header">
+      <p class="logo">Akira KAWATA</p>
   </div>
+  <div id="wrapper">
+    <div id="container">
+      <div id="contents">
+        <h2>Intrests</h2>
 
-  <h2>Work Experience</h2>
-  <ul>
-    <li>Internship, Japan, Rakuten Institute of Technology, March 2018 - April 2018</li>
-  </ul>
+        <ul>
+          <li>Type theory of programming languages</li>
+          <li>Implementation of programming languages</li>
+          <li>Implementation of search engines</li>
+          <li>Competitive programming</li>
+          <li>Haskell</li>
+          <li>Vim</li>
+        </ul>
+        <h2 class="mume-header" id="links">Links</h2>
+
+        <ul>
+          <li><a href="https://github.com/akawashiro">GitHub</a></li>
+          <li><a href="http://a-kawashiro.hatenablog.com/">blog</a></li>
+          <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
+        </ul>
+        <h2>Software & Hardware</h2>
+
+        <ul>
+          <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
+            Type checker for Egison programming language.</li>
+          <li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
+            A mini music player using ATMEGA168 and SD card.</li>
+          <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
+            A simple invader game wirtten in Haskell.</li>
+        </ul>
+
+        <h2>Honors</h2>
+        <ul>
+          <li><a href="https://www.ioi-jp.org/joi/2011/2012-medalists.html">The 11th Japan Olympiad in Informatics,
+              Silver medal.</a></li>
+        </ul>
+        <h2>Work Experience</h2>
+        <ul>
+          <li>Internship, Japan, Rakuten Institute of Technology, March 2018 - April 2018</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
