--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
 
         <ul>
           <li><a href="https://github.com/akawashiro">GitHub</a></li>
-          <li><a href="http://a-kawashiro.hatenablog.com/">blog</a></li>
+          <li><a href="http://a-kawashiro.hatenablog.com/">Blog</a></li>
           <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
         </ul>
         <h2>Software & Hardware</h2>
 
         <ul>
           <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
-            Type checker for Egison programming language.</li>
+            Type checker for Egison programming language</li>
           <li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
-            A mini music player using ATMEGA168 and SD card.</li>
+            Mini music player using ATMEGA168 and SD card</li>
           <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
-            A simple invader game wirtten in Haskell.</li>
+            Simple invader like game wirtten in Haskell</li>
         </ul>
 
         <h2>Honors</h2>
         <ul>
           <li><a href="https://www.ioi-jp.org/joi/2011/2012-medalists.html">The 11th Japan Olympiad in Informatics,
-              Silver medal.</a></li>
+              Silver medal</a></li>
         </ul>
         <h2>Work Experience</h2>
         <ul>
