--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
         <h2>Software & Hardware</h2>
 
         <ul>
-          <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
-            Type checker for Egison programming language</li>
-          <li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
-            Mini music player using ATMEGA168 and SD card</li>
-          <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
-            Simple invader like game wirtten in Haskell</li>
+            <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
+                Type checker for Egison programming language</li>
+            <li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
+                Mini music player using ATMEGA168 and SD card</li>
+            <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
+                Simple invader like game wirtten in Haskell</li>
+            <li><a href="https://github.com/akawashiro/ml2wasm">ml2wasm</a><br>
+                Compiler from ML like language (MinCaml) to WebAssembly
         </ul>
 
         <h2>Honors</h2>
