--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
             A simple invader game wirtten in Haskell.</li>
         </ul>
 
+        <h2>Presentation</h2>
+        <ul>
+            <li><a href="https://connpass.com/event/102061/">Egison Workshop 2018</a><br>
+                Introduction to the type system of Egison.<br>
+                <a href="">Handout of the type system</a><br>
+                Presentation <a href="">pptx file</a> <a href="">pdf file</a>
+              </li>
+        </ul>
+
         <h2>Honors</h2>
         <ul>
           <li><a href="https://www.ioi-jp.org/joi/2011/2012-medalists.html">The 11th Japan Olympiad in Informatics,
