Add files to html

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <ul>
             <li><a href="https://connpass.com/event/102061/">Egison Workshop 2018</a><br>
                 Introduction to the type system of Egison.<br>
-                <a href="">Handout of the type system</a><br>
-                Presentation <a href="">pptx file</a> <a href="">pdf file</a>
+                <a href="https://akawashiro.github.io/EgisonTypingrules.pdf">Handout of the type system</a><br>
+                Presentation <a href="https://github.com/akawashiro/akawashiro.github.io/blob/master/EgisonTypeSystem.pptx?raw=true">pptx file</a> <a href="https://akawashiro.github.io/EgisonTypeSystem.pdf">pdf file</a>
               </li>
         </ul>
 
