--- a/index.html
+++ b/index.html
@@ -54,10 +54,15 @@
               </li>
         </ul>
 
-        <h2>Honors</h2>
+        <h2>Activities</h2>
         <ul>
-          <li><a href="https://www.ioi-jp.org/joi/2011/2012-medalists.html">The 11th Japan Olympiad in Informatics,
-              Silver medal</a></li>
+          <li>
+            <a href="https://www.ioi-jp.org/joi/2011/2012-medalists.html">The 11th Japan Olympiad in Informatics, Silver medal</a>
+          </li>
+          <li>
+            <a href="https://www.ipa.go.jp/jinzai/mitou/2018/gaiyou_s-2">IPA The MITOH Project 2018</a><br>
+            Distibuted Search Engine Using Focus Crawling and Federated Search
+          </li>
         </ul>
         <h2>Work Experience</h2>
         <ul>
