--- a/index.html
+++ b/index.html
@@ -36,22 +36,32 @@
 
         <ul>
             <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
-                Type checker for Egison programming language</li>
+                Type checker for Egison programming language
+            </li>
             <li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
-                Mini music player using ATMEGA168 and SD card</li>
+                Mini music player using ATMEGA168 and SD card
+            </li>
             <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
                 Simple invader like game wirtten in Haskell</li>
             <li><a href="https://github.com/akawashiro/ml2wasm">ml2wasm</a><br>
                 Compiler from ML like language (MinCaml) to WebAssembly
+            </li>
+            <li><a href="https://github.com/kearch/kearch">kearch</a><br>
+                Distibuted search engine made from scratch
+            </li>
         </ul>
 
-        <h2>Presentation</h2>
+        <h2>Publication</h2>
         <ul>
             <li><a href="https://connpass.com/event/102061/">Egison Workshop 2018</a><br>
                 Introduction to the type system of Egison.<br>
                 <a href="https://akawashiro.github.io/EgisonTypingrules.pdf">Handout of the type system</a><br>
                 Presentation <a href="https://github.com/akawashiro/akawashiro.github.io/blob/master/EgisonTypeSystem.pptx?raw=true">pptx file</a> <a href="https://akawashiro.github.io/EgisonTypeSystem.pdf">pdf file</a>
-              </li>
+            </li>
+            <li><a href="https://jssst2018.wordpress.com/">JSSST2018</a><br>
+              Type theory for multistage programming including dependent types
+              <a href="http://jssst.or.jp/files/user/taikai/2018/PPL/ppl1-3.pdf">Paper</a>
+            </li>
         </ul>
 
         <h2>Activities</h2>
