--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 Presentation <a href="https://github.com/akawashiro/akawashiro.github.io/blob/master/EgisonTypeSystem.pptx?raw=true">pptx file</a> <a href="https://akawashiro.github.io/EgisonTypeSystem.pdf">pdf file</a>
             </li>
             <li><a href="https://jssst2018.wordpress.com/">JSSST2018</a><br>
-              Type theory for multistage programming including dependent types
+              Type theory for multistage programming including dependent types<br>
               <a href="http://jssst.or.jp/files/user/taikai/2018/PPL/ppl1-3.pdf">Paper</a>
             </li>
         </ul>
