--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <ul>
           <li>Internship, Japan, Rakuten Institute of Technology, March 2018 - April 2018</li>
         </ul>
+        <h2>GPG fingureprint</h2>
+          9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD
       </div>
     </div>
   </div>
