Add gpg public key

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
           <li>Internship, Japan, Rakuten Institute of Technology, March 2018 - April 2018</li>
         </ul>
         <h2>GPG fingureprint</h2>
-          9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD
+        <ul>
+          <li>
+            <a href="9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD">9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD</a>
+        </li>
+      </ul>
       </div>
     </div>
   </div>
