--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <ul>
           <li>Internship, Japan, Rakuten Institute of Technology, March 2018 - April 2018</li>
         </ul>
-        <h2>GPG fingureprint</h2>
+        <h2>GPG Public Key</h2>
         <ul>
           <li>
             <a href="9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD">9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD</a>
