未踏の最終報告会のファイルを追加

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 Compiler from ML like language (MinCaml) to WebAssembly
             </li>
             <li><a href="https://github.com/kearch/kearch">kearch</a><br>
-                Distibuted search engine made from scratch
+                Distibuted search engine made from scratch</br>
+                <a href="kearchFinalPresentation.pdf">Final Presenation of MITOU project</a>
             </li>
         </ul>
 
@@ -81,7 +82,7 @@
         <h2>GPG Public Key</h2>
         <ul>
           <li>
-            <a href="9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD">9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD</a>
+            <a href="9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD.html">9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD</a>
         </li>
       </ul>
       </div>
