--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </li>
             <li><a href="https://github.com/kearch/kearch">kearch</a><br>
                 Distibuted search engine made from scratch</br>
-                <a href="kearchFinalPresentation.pdf">Final Presenation of MITOU project</a>
+                <a href="kearchFinalPresentation.pdf">Final presenation of MITOU project</a>
             </li>
         </ul>
 
