--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             </li>
             <li><a href="https://github.com/kearch/kearch">kearch</a><br>
                 Distibuted search engine made from scratch</br>
-                <a href="kearchFinalPresentation.pdf">Final presenation of MITOU project</a>
+                <a href="kearchFinalPresentation.pdf">Final presenation of MITOU project</a></br>
+                <a href="https://youtu.be/tErMAEk8wLQ">Demo movie in the final presenation</a>
             </li>
         </ul>
 
