--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="common.css" type="text/css" />
-  <title>Akira KAWATA</title>
+  <title>Akira Kawata</title>
 </head>
 
 
