--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@
         <h2>GPG Public Key</h2>
         <ul>
           <li>
-            <a href="9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD.html">9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD</a>
+            Main key fingure print: 3FB4269CA58D57F0326C1F7488737135568C1AC5
+          </li>
+          <li>
+            Sub key fingure print: 9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD
+          </li>
+          <li>
+            <a href="9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD.html">Public key file</a>
         </li>
       </ul>
       </div>
