--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="header">
-      <p class="logo">Akira KAWATA</p>
+      <p class="logo">Akira Kawata</p>
   </div>
   <div id="wrapper">
     <div id="container">
