--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
           <li>Type theory of programming languages</li>
           <li>Implementation of programming languages</li>
           <li>Implementation of search engines</li>
-          <li>Competitive programming</li>
-          <li>Haskell</li>
-          <li>Vim</li>
         </ul>
         <h2 class="mume-header" id="links">Links</h2>
 
@@ -32,7 +29,7 @@
           <li><a href="http://a-kawashiro.hatenablog.com/">Blog</a></li>
           <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
         </ul>
-        <h2>Software & Hardware</h2>
+        <h2>Software &amp; Hardware</h2>
 
         <ul>
             <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
@@ -55,6 +52,10 @@
 
         <h2>Publication</h2>
         <ul>
+            <li>APLAS 2019<br>
+                A Dependently Typed Multi-Stage Calculus<br>
+                <a href="https://arxiv.org/abs/1908.02035">PDF file</a>
+            </li>
             <li><a href="https://connpass.com/event/102061/">Egison Workshop 2018</a><br>
                 Introduction to the type system of Egison.<br>
                 <a href="https://akawashiro.github.io/EgisonTypingrules.pdf">Handout of the type system</a><br>
