Add linkedin link.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <li><a href="https://github.com/akawashiro">GitHub</a></li>
           <li><a href="http://a-kawashiro.hatenablog.com/">Blog</a></li>
           <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
+          <li><a href="https://www.linkedin.com/in/akira-kawata-93126b151/">LinkedIn</a></li>
         </ul>
         <h2>Software &amp; Hardware</h2>
 
@@ -54,7 +55,7 @@
         <ul>
             <li>APLAS 2019<br>
                 A Dependently Typed Multi-Stage Calculus<br>
-                <a href="https://arxiv.org/abs/1908.02035">PDF file</a>
+                <a href="https://arxiv.org/abs/1908.02035">arxiv</a>
             </li>
             <li><a href="https://connpass.com/event/102061/">Egison Workshop 2018</a><br>
                 Introduction to the type system of Egison.<br>
