Wrote more fine description.

--- a/index.html
+++ b/index.html
@@ -34,20 +34,30 @@
 
         <ul>
             <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
-                Type checker for Egison programming language
+                This is a type checker for Egison programming language. I
+                designed all typing rules for Egison and make type inferencer
+                for Egison with Haskell. You can use it from interpreter.
             </li>
             <li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
-                Mini music player using ATMEGA168 and SD card
+                This is a mini music player using ATMEGA168 and SD card. I
+                wrote FAT16 filesystem for ATMEGA168. Musics are stored in wav
+                files in the root directory.
             </li>
             <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
-                Simple invader like game wirtten in Haskell</li>
+                This is a simple invader like game wirtten in Haskell. I used
+                GLUT to reder the screen.
+            </li>
             <li><a href="https://github.com/akawashiro/ml2wasm">ml2wasm</a><br>
-                Compiler from ML like language (MinCaml) to WebAssembly
+                This is a compiler from ML like language (MinCaml) to WebAssembly.
             </li>
             <li><a href="https://github.com/kearch/kearch">kearch</a><br>
-                Distibuted search engine made from scratch</br>
-                <a href="kearchFinalPresentation.pdf">Final presenation of MITOU project</a></br>
-                <a href="https://youtu.be/tErMAEk8wLQ">Demo movie in the final presenation</a>
+                This is a distibuted search engine made from scratch. There are
+                two type of search engine -- specialzed and meta. A meta search
+                engine takes query from uses and distribute it to appropriate
+                specialzed search engine.
+                </br>
+                <a href="kearchFinalPresentation.pdf">Final presenation of MITOU project (in Japanese)</a></br>
+                <a href="https://youtu.be/tErMAEk8wLQ">Demo movie in the final presenation (in Japanese)</a>
             </li>
         </ul>
 
@@ -55,7 +65,7 @@
         <ul>
             <li>APLAS 2019<br>
                 A Dependently Typed Multi-Stage Calculus<br>
-                <a href="https://arxiv.org/abs/1908.02035">arxiv</a>
+                <a href="https://arxiv.org/abs/1908.02035">PDF file on arxiv</a>
             </li>
             <li><a href="https://connpass.com/event/102061/">Egison Workshop 2018</a><br>
                 Introduction to the type system of Egison.<br>
@@ -78,22 +88,22 @@
             Distibuted Search Engine Using Focus Crawling and Federated Search
           </li>
         </ul>
+
         <h2>Work Experience</h2>
         <ul>
           <li>Internship, Japan, Rakuten Institute of Technology, March 2018 - April 2018</li>
         </ul>
+
         <h2>GPG Public Key</h2>
         <ul>
           <li>
-            Main key fingure print: 3FB4269CA58D57F0326C1F7488737135568C1AC5
-          </li>
-          <li>
-            Sub key fingure print: 9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD
+            Fingure print: 3FB4269CA58D57F0326C1F7488737135568C1AC5
           </li>
           <li>
             <a href="9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD.html">Public key file</a>
         </li>
       </ul>
+
       </div>
     </div>
   </div>
