--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li>Type theory of programming languages</li>
           <li>Implementation of programming languages</li>
           <li>Implementation of search engines</li>
+          <li>Security of binary files</li>
         </ul>
         <h2 class="mume-header" id="links">Links</h2>
 
@@ -33,6 +34,15 @@
         <h2>Software &amp; Hardware</h2>
 
         <ul>
+            <li><a href="https://github.com/kearch/kearch">kearch</a><br>
+                This is a distibuted search engine made from scratch. There are
+                two type of search engine -- specialzed and meta. A meta search
+                engine takes query from uses and distribute it to appropriate
+                specialzed search engine.
+                </br>
+                <a href="kearchFinalPresentation.pdf">Final presenation of MITOU project (in Japanese)</a></br>
+                <a href="https://youtu.be/tErMAEk8wLQ">Demo movie in the final presenation (in Japanese)</a>
+            </li>
             <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
                 This is a type checker for Egison programming language. I
                 designed all typing rules for Egison and make type inferencer
@@ -50,22 +60,15 @@
             <li><a href="https://github.com/akawashiro/ml2wasm">ml2wasm</a><br>
                 This is a compiler from ML like language (MinCaml) to WebAssembly.
             </li>
-            <li><a href="https://github.com/kearch/kearch">kearch</a><br>
-                This is a distibuted search engine made from scratch. There are
-                two type of search engine -- specialzed and meta. A meta search
-                engine takes query from uses and distribute it to appropriate
-                specialzed search engine.
-                </br>
-                <a href="kearchFinalPresentation.pdf">Final presenation of MITOU project (in Japanese)</a></br>
-                <a href="https://youtu.be/tErMAEk8wLQ">Demo movie in the final presenation (in Japanese)</a>
-            </li>
         </ul>
 
         <h2>Publication</h2>
         <ul>
-            <li>APLAS 2019<br>
+            <li><a href="https://conf.researchr.org/home/aplas-2019">APLAS 2019</a><br>
                 A Dependently Typed Multi-Stage Calculus<br>
-                <a href="https://arxiv.org/abs/1908.02035">PDF file on arxiv</a>
+                This is a formal multistage calculus with dependent types. We design its type
+                system and prove type soundness. <br>
+                <a href="https://arxiv.org/abs/1908.02035">Paper on arxiv</a>
             </li>
             <li><a href="https://connpass.com/event/102061/">Egison Workshop 2018</a><br>
                 Introduction to the type system of Egison.<br>
