Wrote on cropass

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 This is a mini music player using ATMEGA168 and SD card. I
                 wrote FAT16 filesystem for ATMEGA168. Musics are stored in wav
                 files in the root directory.
+            </li><a href="https://github.com/akawashiro/cropass">cropass</a><br>
+                <a href="https://github.com/akawashiro/cropass">cropass</a> is
+                a password manager written in Go. I wrote this to use myself.
+                You can generate, add and lookup password records.
+            <li>
             </li>
             <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
                 This is a simple invader like game wirtten in Haskell. I used
