Add Sweet Egison

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="header">
-      <p class="logo">Akira Kawata</p>
+    <p class="logo">Akira Kawata</p>
   </div>
   <div id="wrapper">
     <div id="container">
@@ -34,61 +34,69 @@
         <h2>Software &amp; Hardware</h2>
 
         <ul>
-            <li><a href="https://github.com/kearch/kearch">kearch</a><br>
-                This is a distibuted search engine made from scratch. There are
-                two type of search engine -- specialzed and meta. A meta search
-                engine takes query from uses and distribute it to appropriate
-                specialzed search engine.
-                </br>
-                <a href="kearchFinalPresentation.pdf">Final presenation of MITOU project (in Japanese)</a></br>
-                <a href="https://youtu.be/tErMAEk8wLQ">Demo movie in the final presenation (in Japanese)</a>
-            </li>
-            <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
-                This is a type checker for Egison programming language. I
-                designed all typing rules for Egison and make type inferencer
-                for Egison with Haskell. You can use it from interpreter.
-            </li>
-            <li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
-                This is a mini music player using ATMEGA168 and SD card. I
-                wrote FAT16 filesystem for ATMEGA168. Musics are stored in wav
-                files in the root directory.
-            <li><a href="https://github.com/akawashiro/cropass">cropass</a><br>
-                <a href="https://github.com/akawashiro/cropass">cropass</a> is
-                a password manager written in Go. I wrote this to use myself.
-                You can generate, add and lookup password records.
-            </li>
-            <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
-                This is a simple invader like game wirtten in Haskell. I used
-                GLUT to reder the screen.
-            </li>
-            <li><a href="https://github.com/akawashiro/ml2wasm">ml2wasm</a><br>
-                This is a compiler from ML like language (MinCaml) to WebAssembly.
-            </li>
+          <li><a href="https://github.com/kearch/kearch">kearch</a><br>
+            This is a distibuted search engine made from scratch. There are
+            two type of search engine -- specialzed and meta. A meta search
+            engine takes query from uses and distribute it to appropriate
+            specialzed search engine.
+            </br>
+            <a href="kearchFinalPresentation.pdf">Final presenation of MITOU project (in Japanese)</a></br>
+            <a href="https://youtu.be/tErMAEk8wLQ">Demo movie in the final presenation (in Japanese)</a>
+          </li>
+          <li><a href="https://github.com/egison/typed-egison">typed-egison</a><br>
+            This is a type checker for Egison programming language. I
+            designed all typing rules for Egison and make type inferencer
+            for Egison with Haskell. You can use it from interpreter.
+          </li>
+          <li><a href="https://github.com/akawashiro/wavplayer">wavplayer</a><br>
+            This is a mini music player using ATMEGA168 and SD card. I
+            wrote FAT16 filesystem for ATMEGA168. Musics are stored in wav
+            files in the root directory.
+          <li><a href="https://github.com/akawashiro/cropass">cropass</a><br>
+            <a href="https://github.com/akawashiro/cropass">cropass</a> is
+            a password manager written in Go. I wrote this to use myself.
+            You can generate, add and lookup password records.
+          </li>
+          <li><a href="https://github.com/akawashiro/hinvader">hinvader</a><br>
+            This is a simple invader like game wirtten in Haskell. I used
+            GLUT to reder the screen.
+          </li>
+          <li><a href="https://github.com/akawashiro/ml2wasm">ml2wasm</a><br>
+            This is a compiler from ML like language (MinCaml) to WebAssembly.
+          </li>
         </ul>
 
         <h2>Publication</h2>
         <ul>
-            <li><a href="https://conf.researchr.org/home/aplas-2019">APLAS 2019</a><br>
-                A Dependently Typed Multi-Stage Calculus<br>
-                This is a formal multistage calculus with dependent types. We design its type
-                system and prove type soundness. <br>
-                <a href="https://arxiv.org/abs/1908.02035">Paper on arxiv</a>
-            </li>
-            <li><a href="https://connpass.com/event/102061/">Egison Workshop 2018</a><br>
-                Introduction to the type system of Egison.<br>
-                <a href="https://akawashiro.github.io/EgisonTypingrules.pdf">Handout of the type system</a><br>
-                Presentation <a href="https://github.com/akawashiro/akawashiro.github.io/blob/master/EgisonTypeSystem.pptx?raw=true">pptx file</a> <a href="https://akawashiro.github.io/EgisonTypeSystem.pdf">pdf file</a>
-            </li>
-            <li><a href="https://jssst2018.wordpress.com/">JSSST2018</a><br>
-              Type theory for multistage programming including dependent types<br>
-              <a href="http://jssst.or.jp/files/user/taikai/2018/PPL/ppl1-3.pdf">Paper</a>
-            </li>
+          <li><a href="https://conf.researchr.org/home/aplas-2019">APLAS 2019</a><br>
+            A Dependently Typed Multi-Stage Calculus<br>
+            This is a formal multistage calculus with dependent types. We design its type
+            system and prove type soundness. <br>
+            <a href="https://arxiv.org/abs/1908.02035">Paper on arxiv</a>
+          </li>
+          <li><a href="https://connpass.com/event/102061/">Egison Workshop 2018</a><br>
+            Introduction to the type system of Egison.<br>
+            <a href="https://akawashiro.github.io/EgisonTypingrules.pdf">Handout of the type system</a><br>
+            Presentation <a
+              href="https://github.com/akawashiro/akawashiro.github.io/blob/master/EgisonTypeSystem.pptx?raw=true">pptx
+              file</a> <a href="https://akawashiro.github.io/EgisonTypeSystem.pdf">pdf file</a>
+          </li>
+          <li><a href="https://jssst2018.wordpress.com/">JSSST2018</a><br>
+            Type theory for multistage programming including dependent types<br>
+            <a href="http://jssst.or.jp/files/user/taikai/2018/PPL/ppl1-3.pdf">Paper</a>
+          </li>
+          <li><a
+              href="https://icfp20.sigplan.org/details/hiw-2020-papers/10/Sweet-Egison-a-Haskell-Library-for-Non-Deterministic-Pattern-Matching">ICFP
+              2020 Haskell Implementation Workshop</a><br>
+            Sweet Egison: a Haskell Library for Non-Deterministic Pattern Matching
+          </li>
         </ul>
 
         <h2>Activities</h2>
         <ul>
           <li>
-            <a href="https://www.ioi-jp.org/joi/2011/2012-medalists.html">The 11th Japan Olympiad in Informatics, Silver medal</a>
+            <a href="https://www.ioi-jp.org/joi/2011/2012-medalists.html">The 11th Japan Olympiad in Informatics, Silver
+              medal</a>
           </li>
           <li>
             <a href="https://www.ipa.go.jp/jinzai/mitou/2018/gaiyou_s-2">IPA The MITOH Project 2018</a><br>
@@ -98,8 +106,8 @@
 
         <h2>Work Experience</h2>
         <ul>
-            <li>Software engineer, Japan, Preferred Networks, April 2020 - </li>
-            <li>Internship, Japan, Rakuten Institute of Technology, March 2018 - April 2018</li>
+          <li>Software engineer, Japan, Preferred Networks, April 2020 - </li>
+          <li>Internship, Japan, Rakuten Institute of Technology, March 2018 - April 2018</li>
         </ul>
 
         <h2>GPG Public Key</h2>
@@ -109,8 +117,8 @@
           </li>
           <li>
             <a href="9804D984406FEE5605D5CB82A8DEC03E3DF3BDAD.html">Public key file</a>
-        </li>
-      </ul>
+          </li>
+        </ul>
 
       </div>
     </div>
