--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
           <li><a href="https://github.com/akawashiro/ml2wasm">ml2wasm</a><br>
             This is a compiler from ML like language (MinCaml) to WebAssembly.
           </li>
+          <li><a href="https://github.com/akawashiro/N-body-simulation">N-body-simulation</a><br>
+            Toy n-body simulator.
+          </li>
         </ul>
 
         <h2>Publication</h2>
