--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         <h2>Intrests</h2>
 
         <ul>
+          <li>Executable and Linkable Format</li>
           <li>Type theory of programming languages</li>
           <li>Implementation of programming languages</li>
-          <li>Implementation of search engines</li>
-          <li>Security of binary files</li>
         </ul>
         <h2 class="mume-header" id="links">Links</h2>
 
@@ -34,6 +33,11 @@
         <h2>Software &amp; Hardware</h2>
 
         <ul>
+          <li><a href="https://github.com/akawashiro/sold">sold</a><br>
+            sold is a linker software which links depending shared objects to
+            a binary or a shared object.
+            </br>
+          </li>
           <li><a href="https://github.com/kearch/kearch">kearch</a><br>
             This is a distibuted search engine made from scratch. There are
             two type of search engine -- specialzed and meta. A meta search
