--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             sold is a linker software which links depending shared objects to
             a binary or a shared object.
             </br>
+            <a href="sold_kernelvm_20211120.pdf">Presentation in kernelvm (in Japanese)</a></br>
           </li>
           <li><a href="https://github.com/kearch/kearch">kearch</a><br>
             This is a distibuted search engine made from scratch. There are
