--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             a binary or a shared object.
             </br>
             <a href="sold_kernelvm_20211120.pdf">Presentation in kernelvm (in Japanese)</a></br>
+            <a href="https://www.youtube.com/watch?v=f6EMyVrq3jo">Demo</a><br>
           </li>
           <li><a href="https://github.com/kearch/kearch">kearch</a><br>
             This is a distibuted search engine made from scratch. There are
