Improve Linkedin URL

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="https://github.com/akawashiro">GitHub</a></li>
           <li><a href="http://a-kawashiro.hatenablog.com/">Blog</a></li>
           <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
-          <li><a href="https://www.linkedin.com/in/akira-kawata-93126b151/">LinkedIn</a></li>
+          <li><a href="https://www.linkedin.com/in/akirakawata/">LinkedIn</a></li>
         </ul>
         <h2>Software &amp; Hardware</h2>
 
