Add ld-linux presentation

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
               2020 Haskell Implementation Workshop</a><br>
             Sweet Egison: a Haskell Library for Non-Deterministic Pattern Matching
           </li>
+          <li><a
+              href="https://docs.google.com/presentation/d/1WPxr6d_me_QU3mRWxBzs7y2iPhwV2YeAoB4EGcG9H90/edit?usp=sharing">/lib64/ld-linux-x86-64.so.2</a><br>
+            Random talk on glibc dynamic linker of Linux
+          </li>
         </ul>
 
         <h2>Activities</h2>
