--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="wrapper">
     <div id="container">
       <div id="contents">
-        <h2>Intrests</h2>
+        <h2>Interests</h2>
 
         <ul>
           <li>Executable and Linkable Format</li>
