--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
               href="https://docs.google.com/presentation/d/1WPxr6d_me_QU3mRWxBzs7y2iPhwV2YeAoB4EGcG9H90/edit?usp=sharing">/lib64/ld-linux-x86-64.so.2</a><br>
             Random talk on glibc dynamic linker of Linux
           </li>
+          <li><a
+              href="https://akawashiro.github.io/auxval_kernelvm_20220828.pdf">Lightning talk on AT_RANDOM</a><br>
+          </li>
+
         </ul>
 
         <h2>Activities</h2>
