--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <h2>Software &amp; Hardware</h2>
 
         <ul>
+          <li><a href="https://github.com/akawashiro/z3shape">z3shape</a><br>
+            z3shape infer shapes in ONNX file using Z3 SMT solver.
+            </br>
+          </li>
           <li><a href="https://github.com/akawashiro/sold">sold</a><br>
             sold is a linker software which links depending shared objects to
             a binary or a shared object.
