--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
         <h2>Software &amp; Hardware</h2>
 
         <ul>
+          <li><a href="https://akawashiro.github.io/jendeley/">jendeley</a><br>
+            jendeley is a JSON based document organizing software.
+            <ul>
+                <li>jendeley is JSON-based. You can see and edit your database easily.</li>
+                <li>jendeley is working locally. Your important database is owned only by you. Not cloud.</li>
+                <li>jendeley is browser based. You can run it anywhere node.js runs.</li>
+            </ul>
+            </br>
+          </li>
           <li><a href="https://github.com/akawashiro/sold">sold</a><br>
             sold is a linker software which links depending shared objects to
             a binary or a shared object.
