--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
           <li><a href="http://a-kawashiro.hatenablog.com/">Blog</a></li>
           <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
           <li><a href="https://www.linkedin.com/in/akirakawata/">LinkedIn</a></li>
+          <li><a href=https://keybase.io/a_kawashiro">keybase</a></li>
         </ul>
         <h2>Software &amp; Hardware</h2>
 
         <ul>
           <li><a href="https://akawashiro.github.io/jendeley/">jendeley</a><br>
             jendeley is a JSON based document organizing software.
-            <ul>
-                <li>jendeley is JSON-based. You can see and edit your database easily.</li>
-                <li>jendeley is working locally. Your important database is owned only by you. Not cloud.</li>
-                <li>jendeley is browser based. You can run it anywhere node.js runs.</li>
-            </ul>
+          </br>
+          <a href="https://zenn.dev/a_kawashiro/articles/a2170f967f9508">Introduction article (Japanese)</a>
           <li><a href="https://github.com/akawashiro/z3shape">z3shape</a><br>
             z3shape infer shapes in ONNX file using Z3 SMT solver.
             </br>
