--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="http://a-kawashiro.hatenablog.com/">Blog</a></li>
           <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
           <li><a href="https://www.linkedin.com/in/akirakawata/">LinkedIn</a></li>
-          <li><a href=https://keybase.io/a_kawashiro">keybase</a></li>
+          <li><a href=https://keybase.io/a_kawashiro>keybase</a></li>
         </ul>
         <h2>Software &amp; Hardware</h2>
 
