--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           <li><a href="https://github.com/akawashiro">GitHub</a></li>
           <li><a href="http://a-kawashiro.hatenablog.com/">Blog</a></li>
           <li><a href="https://twitter.com/a_kawashiro">Twitter</a></li>
+          <li><a href="https://mstdn.jp/@a_kawashiro">Mastodon</a></li>
           <li><a href="https://www.linkedin.com/in/akirakawata/">LinkedIn</a></li>
-          <li><a href=https://keybase.io/a_kawashiro>keybase</a></li>
+          <li><a href="https://keybase.io/a_kawashiro">keybase</a></li>
         </ul>
         <h2>Software &amp; Hardware</h2>
 
