--- a/3FB4269CA58D57F0326C1F7488737135568C1AC5.html
+++ b/3FB4269CA58D57F0326C1F7488737135568C1AC5.html
@@ -1,3 +1,4 @@
+<pre>
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
 mQGNBFxfAKkBDACaMr/XCLiHB51cufsIHxmKVIu8Nn3kn9mhDqqHEnu8NFubVqHD
@@ -66,3 +67,4 @@ puFMqBtTEowa8K12Zsr8Lr6IBE5mTs11JUtYRDa8weu+bSreqtA5u3DmniXnEaMT
 udksV+AOuL9bXGxY
 =HHcR
 -----END PGP PUBLIC KEY BLOCK-----
+</pre>
